--- a/src/assets/scss/components/_modals.scss
+++ b/src/assets/scss/components/_modals.scss
@@ -11,10 +11,11 @@
     max-width: 100%;
     max-height: 100%;
     border: none;
+    overflow: auto;
 
     &--success {
         .modal__body {
-            padding: rem(200px 0);
+            padding: rem(10vh 0);
         }
 
         .modal__title {
@@ -47,10 +48,7 @@
 
         @include media-breakpoint-down(lg) {
             width: calc(100% - 16px);
-        }
-
-        @include media-breakpoint-down(sm) {
-            width: calc(100% - 10px);
+            margin-top: rem(40px);
         }
     }
 
@@ -105,6 +103,7 @@
 
         @include media-breakpoint-down(sm) {
             width: 100%;
+            padding-bottom: rem(40px);
         }
     }
 
