--- a/src/assets/scss/components/_small-components.scss
+++ b/src/assets/scss/components/_small-components.scss
@@ -222,8 +222,8 @@
             }
 
             .socials-widget__small-socials {
-                width: rem(210px);
-                max-width: rem(210px);
+                max-width: rem(250px);
+                width: rem(250px);
             }
         }
     }
