--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -60,11 +60,11 @@
         }
 
         @include media-breakpoint-down(sm) {
-            font-size: rem(14px);
+            font-size: rem(18px);
         }
 
-        @include media-breakpoint-down(xs) {
-            font-size: rem(10px);
+        @media (width <= 360px) {
+            font-size: rem(14px);
         }
     }
 
@@ -74,6 +74,7 @@
         max-width: 100px;
         height: rem(80px);
         border-radius: rem(16px);
+        flex: 0 0 auto;
         overflow: hidden;
         margin-right: rem(16px);
 
@@ -84,7 +85,7 @@
         }
 
         @include media-breakpoint-down(xxl) {
-            max-width: 60px;
+            max-width: rem(60px);
             height: rem(48px);
         }
 
@@ -98,7 +99,8 @@
         }
 
         @include media-breakpoint-down(xs) {
-            height: rem(30px);
+            height: rem(40px);
+            max-width: rem(50px);
         }
     }
 
